--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 
 
       #header {
-        background-image: url("assets/rails.png");
+        background-image: url("assets/train.jpg");
         background-repeat: no-repeat;
         background-position: top left;
         height: 64px;
@@ -208,8 +208,9 @@
         </div>
 
         <div id="about">
-          <h3><a href="rails/info/properties" onclick="about(); return false">About your application&rsquo;s environment</a></h3>
-          <div id="about-content" style="display: none"></div>
+          <!--<h3><a href="rails/info/properties" onclick="about(); return false">About your application&rsquo;s environment</a></h3>
+          <div id="about-content" style="display: none"></div>-->
+          <div id="about-content">Comming Soon..!</div>
         </div>
 
         <div id="getting-started">
