--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,7 @@
         </div>
 
         <div id="getting-started">
-          <img src="assets/train.jpg"></img>
+          <img src="images/train.jpg"></img>
       </div>
 
       <div id="footer">&nbsp;</div>
