changing index page

--- a/public/index.html
+++ b/public/index.html
@@ -215,6 +215,7 @@
 
         <div id="getting-started">
           <img src="images/train.jpg"></img>
+         </div> 
       </div>
 
       <div id="footer">&nbsp;</div>
