--- a/public/index.html
+++ b/public/index.html
@@ -208,17 +208,13 @@
         </div>
 
         <div id="about">
-          <!--<h3><a href="rails/info/properties" onclick="about(); return false">About your application&rsquo;s environment</a></h3>
-          <div id="about-content" style="display: none"></div>-->
           <div id="about-content">Comming Soon..!</div>
         </div>
 
-        <div id="getting-started">
-          <img src="images/train.jpg"></img>
+         <div id="getting-started">
+          <img src="images/train.jpg"/>
          </div> 
-      </div>
-
-      <div id="footer">&nbsp;</div>
+    </div>
     </div>
   </body>
 </html>
