changing index page

--- a/public/index.html
+++ b/public/index.html
@@ -212,7 +212,7 @@
         </div>
 
          <div id="getting-started">
-          <img src="images/train.jpg"/>
+          <img src="images/train.jpg" width=200 height=150/>
          </div> 
     </div>
     </div>
