changing index page

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ruby on Rails: Welcome aboard</title>
+    <title>M.vijayasekhar reddy: Welcome aboard</title>
+    <META NAME="keywords" content=" Ruby on Rails , Ruby, ROR examples, ajax, mysql, ROR tutorials, free scripts, bugs">
+<META NAME="Description" CONTENT="Ruby on Rails Experts Forum is an online community for expert Ruby on Rails (RoR) developers. Free scripts, Tutorials, Bugs & Fixed are available here. AJAX, MySQL and all major open souce content management systems are discussed here.">
+
     <style type="text/css" media="screen">
       body {
         margin: 0;
