--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
         </div>
 
         <div id="about">
-          <div id="about-content">Work in progress..!</div>
+          <div id="about-content">Comming Soon..!</div>
         </div>
 
          <div id="getting-started">
